added infinete scroll bar and loading bar

--- a/src/component/NewsItems/newItem.css
+++ b/src/component/NewsItems/newItem.css
@@ -1,4 +1,8 @@
+.card{
+    font-family: 'Smooch Sans', sans-serif;
+}
 .author{
+    padding: 10px;
     color: rgb(71, 165, 9);
 }
 .card-img-top{
